@@ -36,7 +36,6 @@ EDIT:
 * CertificateCAs / AcmeOrders
 ** if the fullchain has more than one certificate, track it as an intermediary
 ** should CertificateCAs just be normal certificates with a flag?
-
 * integrate ALEMEBIC and migrate the database_migrations file to it
 
 ====
